refactor: criado o handleErroInesperado e colocado os logs